--- a/td/td1/Makefile
+++ b/td/td1/Makefile
@@ -1,10 +1,10 @@
-DIR_CLASS = classes/
-DIR_SRC = src/main/java/fr/ubordeaux/ao/
-JFLAGS = -g -d $(DIR_CLASS) -sourcepath $(DIR_SRC)
+DIR_CLASS = classes
+DIR_SRC = src/main/java
+JFLAGS = -g -d $(DIR_CLASS) -cp $(DIR_SRC)
 JC = javac
 JVM = java
 
-SRC = $(DIR_SRC)*.java
+SRC = $(shell find ./src/main/java -type f -name '*.java')
 CLASS = $(SRC:.java=.class)
 
 all: $(CLASS)
@@ -12,5 +12,10 @@ all: $(CLASS)
 %.class: %.java
 	$(JC) $(JFLAGS) $<
 
+run:
+	$(JVM) -cp $(DIR_CLASS) fr.ubordeaux.ao.Main
+
+.PHONY: clean
 clean:
-	rm -rf $(DIR_CLASS)*.class
+	rm -rf $(DIR_CLASS)/fr/
+	rm -rf *~ .*~
