--- a/td/td2/build.gradle
+++ b/td/td2/build.gradle
@@ -20,6 +20,17 @@ repositories {
     mavenCentral()
 }
 
+dependencies {
+  testCompile 'junit:junit:4.12'
+}
+
+test {
+    testLogging {
+        // Show that tests are run in the command-line output
+        events 'started', 'passed'
+    }
+}
+
 apply plugin: 'application'
 mainClassName = "fr.ubordeaux.ao.Main"
 
