--- a/td/td5/build.gradle
+++ b/td/td5/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'java'
 group = 'fr.ubordeaux.ao'
 version = '1.0-SNAPSHOT'
 
-description = """TD4"""
+description = """TD5"""
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -32,7 +32,7 @@ tasks.withType(FindBugs) {
 }
 
 apply plugin: 'application'
-mainClassName = "fr.ubordeaux.ao.ui.ConsoleMain"
+mainClassName = "fr.ubordeaux.ao.ui.CommandLineMain"
 
 run {
    standardInput = System.in
