--- a/td/td7/build.gradle
+++ b/td/td7/build.gradle
@@ -31,7 +31,7 @@ tasks.withType(FindBugs) {
 }
 
 apply plugin: 'application'
-mainClassName = "fr.ubordeaux.ao.ui.CommandLineMain"
+mainClassName = "fr.ubordeaux.ao.referencemanagement.ui.CommandLineMain"
 
 run {
    standardInput = System.in
